--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 
 </head>
 <body>
-    <h1>Welcome to Kenya</h1>
-    <footer>This project was coded by <strong>Milga Ahmed</strong>and is <a href="">Open-sourced</a></footer>
+    <div class="container">
+<header>
+    <h1>Welcome To Kenya</h1>
+    <p>Where Safari was born</p>
+    <a href="https://en.wikipedia.org/wiki/Tourism_in_Kenya" target="_blank">Learn More</a>
+</header>
+    <footer>This project was coded by <strong>Milga Ahmed</strong>and is <a href="https://github.com/ZaamiAhmed/Tourist-attraction-kenya" target="_blank">Open-sourced</a></footer>
+</div>
 </body>
+
 </html>
