added footer to the project

--- a/index.html
+++ b/index.html
@@ -18,8 +18,32 @@
     <p>Where Safari was born</p>
     <a href="https://en.wikipedia.org/wiki/Tourism_in_Kenya" target="_blank">Learn More</a>
 </header>
-    <footer>This project was coded by <strong>Milga Ahmed</strong> and is <a href="https://github.com/ZaamiAhmed/Tourist-attraction-kenya" target="_blank">Open-sourced</a></footer>
 </div>
+    <footer>
+        This project was coded by <strong>Milga Ahmed</strong> and is <a href="https://github.com/ZaamiAhmed/Tourist-attraction-kenya" target="_blank">Open-sourced</a>
+    <div>
+ <h3>Contact Info</h3>
+<h5>Kenya Tourism Board</h5>
+<p>🏫  Kenya-Re Towers, 7th Floor, Upper Hill</p>
+<p>📱0709978683</p>
+<p>✉️KenyaTourism@gmail.com</p>
+    </div>
+
+     <div>
+ <h3>Our Partners</h3>
+ <ul>
+     <li><a href="https://museums.or.ke/">National Museum Of Kenya</a></li>
+     <li><a href="https://magicalkenya.com/">Magical Kenya</a></li>
+     <li><a href="https://www.kws.go.ke/">Kenya wildLife services</a></li>
+ </ul>
+ 
+    </div>
+     <div>
+ <h3>More Info</h3>
+ 
+    </div>
+    </footer>
+
 </body>
 
 </html>
