--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 </header>
 </div>
     <footer>
-        This project was coded by <strong>Milga Ahmed</strong> and is <a href="https://github.com/ZaamiAhmed/Tourist-attraction-kenya" target="_blank">Open-sourced</a>
+        <section class="grid">
     <div>
- <h3>Contact Info</h3>
+ <h3 class="contact-info">Contact Info</h3>
+ 
 <h5>Kenya Tourism Board</h5>
 <p>🏫  Kenya-Re Towers, 7th Floor, Upper Hill</p>
 <p>📱0709978683</p>
@@ -30,7 +31,8 @@
     </div>
 
      <div>
- <h3>Our Partners</h3>
+ <h3 class="partners">Our Partners</h3>
+
  <ul>
      <li><a href="https://museums.or.ke/">National Museum Of Kenya</a></li>
      <li><a href="https://magicalkenya.com/">Magical Kenya</a></li>
@@ -41,7 +43,12 @@
      <div>
  <h3>More Info</h3>
  
+ 
     </div>
+    <!-- This project was coded by <strong>Milga Ahmed</strong> and is <a href="https://github.com/ZaamiAhmed/Tourist-attraction-kenya" target="_blank">Open-sourced</a> -->
+    </section>
+    This project was coded by <strong>Milga Ahmed</strong> and is <a href="https://github.com/ZaamiAhmed/Tourist-attraction-kenya" target="_blank">Open-sourced</a>
+
     </footer>
 
 </body>
