added media query

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <h3 class="contact-info">Contact Info</h3>
  
 <h5>Kenya Tourism Board</h5>
-<p>🏫  Kenya-Re Towers, 7th Floor, Upper Hill</p>
+<p>🏫  Kenya-Re Towers, 7th Floor, Upper Hill </p>
 <p>📱0709978683</p>
 <p>✉️KenyaTourism@gmail.com</p>
     </div>
@@ -42,12 +42,16 @@
     </div>
      <div>
  <h3>More Info</h3>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31910.60593419514!2d36.81176603536376!3d-1.278063761921679!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f172e2b30a483%3A0x24eee4c08364a0f3!2sNational%20Museum%20of%20Kenya!5e0!3m2!1sen!2ske!4v1743707358295!5m2!1sen!2ske" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
  
  
     </div>
     <!-- This project was coded by <strong>Milga Ahmed</strong> and is <a href="https://github.com/ZaamiAhmed/Tourist-attraction-kenya" target="_blank">Open-sourced</a> -->
     </section>
-    This project was coded by <strong>Milga Ahmed</strong> and is <a href="https://github.com/ZaamiAhmed/Tourist-attraction-kenya" target="_blank">Open-sourced</a>
+    <span>This project was coded by <strong>Milga Ahmed</strong> and is <a href="https://github.com/ZaamiAhmed/Tourist-attraction-kenya" target="_blank">Open-sourced</a>
+    </span>
+    </footer>
 
     </footer>
 
