--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
  <h3 class="contact-info">Contact Info</h3>
  
 <h5>Kenya Tourism Board</h5>
-<p>🏫  Kenya-Re Towers, 7th Floor, Upper Hill </p>
-<p>📱0709978683</p>
-<p>✉️KenyaTourism@gmail.com</p>
+<p><strong>Building :</strong> Kenya-Re Towers, 7th Floor, Upper Hill </p>
+<p><strong>PhoneNumber:</strong> +254789976523</p>
+<p> <strong>Email :</strong>KenyaTourism@gmail.com</p>
     </div>
 
      <div>
