--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
     <a href="https://en.wikipedia.org/wiki/Tourism_in_Kenya" target="_blank">Learn More</a>
 </header>
 </div>
+<main class="main-sec">
+    <h1>Top Attractions & Places to Visit in Kenya</h1>
+    <div>
+<p>One of the best places to go on safari in the world, Kenya is renowned for its rich wildlife and innumerable nature reserves. While most people come to see the Big 5, pearly white beaches and historic Swahili settlements line its stunning coast.</p>
+    </div>
+    
+     <div><p>Located in East Africa alongside the Indian Ocean, it has long been one of the most popular countries to visit on the continent. Incredibly diverse, its national parks encompass everything from mountains and deserts to wetlands, plains, and lakes. They host an abundance of wildlife with the Maasai Mara and its wildebeest migration being the most famous of the lot.</p></div>
+
+    <div><p>The wildlife safaris have been the top tourist attractions in Kenya for decades. Other things to do include trekking Mount Kenya, ballooning over the Masai Mara and snorkeling in Malindi on the Indian Ocean coast. This makes for a nice change after days spent looking for elephants, giraffes and lions.</p></div>
+</main>
     <footer>
         <section class="grid">
     <div>
