added section part

--- a/index.html
+++ b/index.html
@@ -28,7 +28,26 @@
      <div><p>Located in East Africa alongside the Indian Ocean, it has long been one of the most popular countries to visit on the continent. Incredibly diverse, its national parks encompass everything from mountains and deserts to wetlands, plains, and lakes. They host an abundance of wildlife with the Maasai Mara and its wildebeest migration being the most famous of the lot.</p></div>
 
     <div><p>The wildlife safaris have been the top tourist attractions in Kenya for decades. Other things to do include trekking Mount Kenya, ballooning over the Masai Mara and snorkeling in Malindi on the Indian Ocean coast. This makes for a nice change after days spent looking for elephants, giraffes and lions.</p></div>
-</main>
+    
+    </main>
+    <h2>This is the places You can visit.</h2>
+    <section class="tourist-places">
+    <div>
+        <img src="src/Images/lake-nakuru.jpg" alt="lake-nakuru">
+        <p>This is Lake Nakuru and is famous for its huge flocks of pink flamingos.</p>
+
+    </div>
+    <div>
+        <img src="src/Images/mountain-kenya.jpg" alt="mount-kenya">
+        <p>This is the tallest mountain in kenya and second tallest in Africa.</p>
+    </div>
+    <div>
+        <img src="src/Images/national-park.jpg" alt="Nairobi-national park">
+         <p>one of the biggest national parks in Nairobi.</p>
+        
+    </div>
+    </section>
+
     <footer>
         <section class="grid">
     <div>
