--- a/index.html
+++ b/index.html
@@ -35,16 +35,23 @@
     <div>
         <img src="src/Images/lake-nakuru.jpg" alt="lake-nakuru">
         <p>This is Lake Nakuru and is famous for its huge flocks of pink flamingos.</p>
-
+     <a href="https://www.safaribookings.com/tours/nakuru">Nakuru Safaris</a>
     </div>
     <div>
         <img src="src/Images/mountain-kenya.jpg" alt="mount-kenya">
         <p>This is the tallest mountain in kenya and second tallest in Africa.</p>
+        <a href="https://www.safaribookings.com/tours/mt-kenya">Mt Kenya Climbs</a>
     </div>
     <div>
         <img src="src/Images/national-park.jpg" alt="Nairobi-national park">
          <p>one of the biggest national parks in Nairobi.</p>
+         <a href="https://www.safaribookings.com/tours/kenya">Nairobi Game parks</a>
         
+    </div>
+    <div>
+        <img src="src/Images/kenya-lamu.jpg" alt="lamu-island">
+        <p>Lamu island one of the most beautiful island in Africa.</p>
+        <a href="https://www.safaribookings.com/tours/lamu">Lamu Packages</a>
     </div>
     </section>
 
@@ -54,9 +61,9 @@
  <h3 class="contact-info">Contact Info</h3>
  
 <h5>Kenya Tourism Board</h5>
-<p><strong>Building :</strong> Kenya-Re Towers, 7th Floor, Upper Hill </p>
+<p><strong>Building:</strong> Kenya-Re Towers, 7th Floor, Upper Hill </p>
 <p><strong>PhoneNumber:</strong> +254789976523</p>
-<p> <strong>Email :</strong>KenyaTourism@gmail.com</p>
+<p> <strong>Email:</strong>KenyaTourism@gmail.com</p>
     </div>
 
      <div>
