--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div>
         <img src="src/Images/maasai mara.jpg" alt="">
-        <p>The Masai Mara National Reserve is one of the most famous safari destinations on the continent.</p>
+        <p>The Masai Mara National Reserve is one of the most beautiful.</p>
      <a href="https://www.safaribookings.com/tours/masai-mara" target="_blank">Maasai Mara Safari</a>
     </div>
     </section>
